UI/assets/css/custom.css
/* Variables */
:root {
    --primary: #ddd;
    --dark: #333;
    --light: #fff;
    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
    --hovered: #555;
}

html {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    color: var(--dark);
}

body {
    /* background: #ccc; */
    background: #EDEDEC;
    margin: 30px 50px;
    line-height: 1.4;
}

.btn {
    background: var(--dark);
    color: var(--light);
    padding: 0.6rem 1.6rem;
    text-decoration: none;
    border: 0;
}

img {
    max-width: 100%;
}

.lead {
    background: var(--dark);
    color: var(--light);
    font-weight: bold;
    margin: 0px;
    padding: 0px 5px;
}

/* Login */
.login-section {    
    display: grid;
    justify-items: center;
}

.login {
    margin-top: 10%;
    background: lightgray;
    box-shadow: var(--shadow);
    padding: 0.5rem 1.6rem 1.6rem 1.6rem;
}

.login h3 {
    text-align: center;
    text-transform: capitalize;
    font-size: 1.5rem;
    margin: 0.5rem;
}

.login input {
    width: 100%;
    padding: 0.5rem 0;
    margin: 5px 0px;
    text-align: center;
}

.login-btn {
    float: right;
    width: 50%;
    margin: 5px 0px;
}

/* Dashboard */
.container {
    display: grid;
    grid-gap: 20px;
}

.header {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(3, 1fr);
    font-weight: bold;
    color: var(--dark);
    background: var(--primary);
    box-shadow: var(--shadow);
    padding: 1rem;
}

.header .logo {
    text-transform: uppercase;
    justify-self: left;
}

.header .title {
    text-transform: uppercase;
    justify-self: center;
}

.header .user {
    text-transform: capitalize;
    justify-self: right;
}

/* Main */

.main{
    display: grid;
    grid-gap: 20px;
    grid-template-columns: 2fr 10fr;
    min-height: 400px;
}

.sidebar, .showarea, .sales-point, .all-products {
    box-shadow: var(--shadow);
}

/* Main - Sidebar */
.sidebar {
    padding: 0;
    margin: 0px;
}

.sidebar ul {
    list-style-type: none;
    box-shadow: var(--shadow);
    padding: 0;
    margin: 0 0 20px 0;
    border: 1px solid var(--dark);
}

.sidebar li a {
    display: block;
    color: var(--dark);
    margin: 0px;
    padding: 0px 5px;
    text-decoration: none;
}

.sidebar li {
    border-bottom: 1px solid var(--dark);
}

.sidebar li:last-child {
    border-bottom: none;
}

li a.active, li a:hover:not(.active) {
    background-color: var(--hovered);
    color: var(--light);
}

.sidebar .major, .Administration, .settings {
    box-shadow: var(--shadow);
    width: 100%;
}

/* Main - Show Area */
.main .showarea {
    padding: 1.5rem;
}

/* Main - Show Area - Show Case */
.showcase {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.showcase > div {
    text-align: center;
    margin-bottom: 1rem;
    box-shadow: var(--shadow);
}

.showcase > div h4 {
    font-weight: bolder;
    font-size: 2rem;
    margin: 0.5rem;
}

.showcase > div p {
    font-weight: bolder;
    font-size: 2rem;
    margin: 0.5rem;
}

.showcase > div:hover {
    background: var(--dark);
    color: var(--light);
}

/* Main - Show Area - Recent Sales */
table {
    color: var(--dark);
    width: 100%;
    border: 1px;
}

table caption {
    font-weight: bolder;
    text-align: center;
    background: var(--dark);
    color: var(--light);
}

table, th, td {
    border: 1px solid var(--dark);
    border-collapse: collapse;
    text-align: center;
}

table a {
    color: var(--dark);
    text-decoration: none;
}

table a:hover {
    font-weight: bold;
}


/* sales point */
.sales-point {
    display: grid;
    grid-gap: 20px;
    grid-template-columns:  repeat(auto-fit, minmax(400px, 1fr));
    padding: 1rem;
}

/* Products */

.all-products {
    padding: 1.5rem;
}

.products .search form {
    padding: 0.5rem 0;
    text-align: center;
}

.add-products {
    margin-bottom: 20px;
}

.products-title {
    background: var(--dark);
    color: var(--light);
    text-align: center;
}

.add-products form {
    text-align: center;
}

.add-products form input, .add-products form select, .add-products form button{
    display: inline-block;
    width: 20%;
    margin: 0.1rem 1rem 0.1rem 0.1rem;
    padding: 0.3rem;
    font-size: 15px;
    text-transform: capitalize;
    border: 1px solid var(--dark);
    border-radius: 4px;
}

.products-title p {
    padding: 5px;
    margin: 5px;
}

.change-password h3 {
    margin: 0%;
    font-weight: bold;
    text-transform: uppercase;
}

.change-password form input, .products form > input{
    margin: 0.1rem 1rem 0.1rem 0.1rem;
    padding: 0.3rem;
    font-size: 15px;
    text-transform: capitalize;
    width: 90%;
    border: 1px solid var(--dark);
    border-radius: 4px;
}

/* Buyer Cart */

.buyer-cart h2 {
    margin: 0.5rem 0;
    text-align: center;
}

.buyer-cart span {
    font-weight: bold;
}

.buyer-cart button {
    float: right;
    width: 30%;
}

.products-table input {
    width: 4rem;
    text-align: center;
}

/* Setings */

/* Change Password */
.change-password {
    display: grid;
    grid-gap: 20px;
    grid-template-columns:  1fr;
    justify-items: center;
    padding: 2rem;
}

.change-password-form {
    padding: 2rem 0;
    width: 500px;
    box-shadow: var(--shadow);
}

.change-password form > input, .change-password form > button{
    margin: 1rem;
    padding: 0.5rem;
    font-size: 15px;
    text-transform: capitalize;
    width: 90%;
    border: 1px solid var(--dark);
    border-radius: 4px;
}


/* Footer */
.footer {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(1fr);
    font-weight: bold;
    font-size: normal;
    color: var(--dark);
    background: var(--primary);
    box-shadow: var(--shadow);
    padding: 0 1rem;
    text-align: center
}

